fron-end plantilla

--- a/Front-end/app/views/contract/renew.html
+++ b/Front-end/app/views/contract/renew.html
@@ -11,11 +11,20 @@
 
   <title>Actualización contrato</title>
 
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+    .box{
+  margin: 1px auto;
+  width: 300px;
+  height: 50px;
+}
+  </style>
+
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -35,14 +44,19 @@
                     <h1 class="h4 text-gray-900 mb-4">Actualización contrato</h1>
                   </div>
                   <form class="user">
-                    <div class="form-group">
-                      <input type="text" class="form-control form-control-user" id="rol" aria-describedby="id" placeholder="Id contrato">
+                    <div class="box">
+                      <div class="container-1">
+                          <span class="icon"><i class="fa fa-search"></i></span>
+                          <input type="search" id="search" placeholder="Id contrato" />
+                      </div>
                     </div>
                     <div class="form-group">
                       <input type="date" class="form-control form-control-user" id="date" placeholder="Fecha inicio contrato">
+                      <h6>Fecha inicio contrato</h6>
                     </div>
                     <div class="form-group">
                       <input type="date" class="form-control form-control-user" id="date" placeholder="Fecha termino contrato">
+                      <h6>Fecha termino contrato</h6>
                     </div>
                     <div class="form-group">
                       <input type="number" class="form-control form-control-user" id="salary" placeholder="Valor total">
