--- a/Front-end/app/views/route/save.html
+++ b/Front-end/app/views/route/save.html
@@ -11,11 +11,15 @@
 
   <title>Rutas</title>
 
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+  </style>
+
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -46,7 +50,7 @@
                     </div>
                     
                     <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Registrar
+                      Registrar Ruta
                     </a>
                     <hr>
                   </form>
