--- a/Front-end/app/views/route/update.html
+++ b/Front-end/app/views/route/update.html
@@ -11,11 +11,15 @@
 
   <title>Rutas</title>
 
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+  </style>
+
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
