--- a/Front-end/app/views/templates/navbar.html
+++ b/Front-end/app/views/templates/navbar.html
@@ -6,6 +6,20 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#/"> <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="#/user/list">Registrar Usuario</a>
+            <a class="nav-item nav-link active" href="#/user/up">Actualizar Usuario</a>
+            <a class="nav-item nav-link active" href="#/user/upda">Actualizar Imágen</a>
+            <a class="nav-item nav-link active" href="#/user/update">Actualizar Contraseña</a>
+            <a class="nav-item nav-link active" href="#/user/create">User create</a>
+            <a class="nav-item nav-link active" href="#/bus/create">Registrar Bus</a>
+            <a class="nav-item nav-link active" href="#/bus/list">Modificar Registro Bus</a>
+            <a class="nav-item nav-link active" href="#/contract/create">Registrar Contrato</a>
+            <a class="nav-item nav-link active" href="#/contract/list">Actualizar Contrato</a>
+            <a class="nav-item nav-link active" href="#/route/create">Registrar Rutas</a>
+            <a class="nav-item nav-link active" href="#/route/list">Actualización Rutas</a>
+            <a class="nav-item nav-link active" href="#/routebus/list">Registro Ruta-Bus</a>
+            <a class="nav-item nav-link active" href="#/routebus/create">Actualizar Ruta-Bus</a>
         </div>
     </div>
 </nav>
+
