--- a/Front-end/app/views/user/updatepass.html
+++ b/Front-end/app/views/user/updatepass.html
@@ -9,13 +9,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Actualizar Datos Usuario</title>
+  <title>Restablecer contraseña</title>
+
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+  </style>
 
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -32,19 +36,15 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Actualizar  ontraseña</h1>
+                    <h1 class="h4 text-gray-900 mb-2">¿Olvidaste la contraseña?</h1>
+                    <p class="mb-4">Lo entendemos, pasan cosas. Simplemente ingrese su dirección de correo electrónico a continuación y le enviaremos un enlace para restablecer su contraseña.</p>
                   </div>
                   <form class="user">
                     <div class="form-group">
-                        <input type="password" class="form-control form-control-user" id="password" placeholder="Contraseña">
-                      </div>
-                    
-                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Actualizar contraseña
-                    </a>
-                    <hr>
-                    <a href="index.html" class="btn btn-google btn-user btn-block">
-                      <i class="fab fa-google fa-fw"></i> Inicia sesión con Google
+                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Correo electrónico...">
+                    </div>
+                    <a href="login.html" class="btn btn-primary btn-user btn-block">
+                      Restablecer Contraseña
                     </a>
                   </form>
                   <hr>
