--- a/Front-end/app/views/bus/list.html
+++ b/Front-end/app/views/bus/list.html
@@ -9,13 +9,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Login</title>
+  <title>Modificar</title>
+
+  <style>
+      body{
+          background-color: #105DEC;
+      }
+  </style>
 
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -32,11 +36,11 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Modificar registro de Bus</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Modificar Bus</h1>
                   </div>
                   <form class="bus">
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-user" id="rol" aria-describedby="" placeholder="Placa">
+                      <input type="number" class="form-control form-control-user" id="placa" aria-describedby="" placeholder="Placa">
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-user" id="name" placeholder="Color">
