--- a/Front-end/app/views/bus/register.html
+++ b/Front-end/app/views/bus/register.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Login</title>
-
-</head>
-
-<body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
-
+<style>
+  body{
+    background-color: #105DEC;
+  }
+  .box{
+  margin: 1px auto;
+  width: 300px;
+  height: 50px;
+}
+</style>
   <div class="container">
 
     <!-- Outer Row -->
@@ -32,15 +23,18 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Modificar registro de Bus</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Registro de Bus</h1>
                   </div>
                   <form class="bus">
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-user" id="rol" aria-describedby="" placeholder="Placa">
+                      <input type="number" class="form-control form-control-user" id="placa" aria-describedby="" placeholder="Placa">
                     </div>
-                    <div class="form-group">
-                        <input type="numer" class="form-control form-control-user" id="id" aria-describedby="" placeholder="ID Usuario">
+                    <div class="box">
+                      <div class="container-1">
+                          <span class="icon"><i class="fa fa-search"></i></span>
+                          <input type="search" id="search" placeholder="Id usuario" />
                       </div>
+                    </div>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-user" id="name" placeholder="Color">
                     </div>
@@ -52,7 +46,7 @@
                     </div>
                     
                     <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Modificar
+                      Registrar
                     </a>
                     <hr>
                   </form>
@@ -68,7 +62,3 @@
     </div>
 
   </div>
-
-</body>
-
-</html>
