--- a/Front-end/app/views/routebus/save.html
+++ b/Front-end/app/views/routebus/save.html
@@ -11,11 +11,20 @@
 
   <title>Login</title>
 
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+    .box{
+  margin: 1px auto;
+  width: 300px;
+  height: 50px;
+}
+  </style>
+
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -35,9 +44,12 @@
                     <h1 class="h4 text-gray-900 mb-4">Registro ruta-bus</h1>
                   </div>
                   <form class="routebus">
-                    <div class="form-group">
-                        <input type="numer" class="form-control form-control-routebus" id="id" aria-describedby="" placeholder="ID ruta">
+                    <div class="box">
+                      <div class="container-1">
+                          <span class="icon"><i class="fa fa-search"></i></span>
+                          <input type="search" id="search" placeholder="Id ruta" />
                       </div>
+                    </div>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-routebus" id="rol" aria-describedby="" placeholder="Placa">
                     </div>
