--- a/Front-end/app/views/routebus/update.html
+++ b/Front-end/app/views/routebus/update.html
@@ -9,13 +9,22 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Actualzación</title>
+  <title>Actualización</title>
+
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+    .box{
+  margin: 1px auto;
+  width: 300px;
+  height: 50px;
+}
+  </style>
 
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -35,11 +44,14 @@
                     <h1 class="h4 text-gray-900 mb-4">Actualizar ruta-bus</h1>
                   </div>
                   <form class="routebus">
-                    <div class="form-group">
-                        <input type="numer" class="form-control form-control-routebus" id="id" aria-describedby="" placeholder="ID ruta">
+                    <div class="box">
+                      <div class="container-1">
+                          <span class="icon"><i class="fa fa-search"></i></span>
+                          <input type="search" id="search" placeholder="Id ruta" />
                       </div>
+                    </div>
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-routebus" id="rol" aria-describedby="" placeholder="Placa">
+                      <input type="text" class="form-control form-control-routebus" id="placa" placeholder="Placa">
                     </div>
                     <div class="form-group">
                         <input type="datetime" class="form-control form-control-routebus" id="place" placeholder="Fecha y hora de partida">
