--- a/Front-end/app/views/user/list.html
+++ b/Front-end/app/views/user/list.html
@@ -9,13 +9,22 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Login</title>
+  <title>Registro</title>
+
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+.box{
+  margin: 1px auto;
+  width: 300px;
+  height: 50px;
+}
+  </style>
 
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -35,8 +44,11 @@
                     <h1 class="h4 text-gray-900 mb-4">Registro usuario</h1>
                   </div>
                   <form class="user">
-                    <div class="form-group">
-                      <input type="text" class="form-control form-control-user" id="rol" aria-describedby="emailHelp" placeholder="Id rol">
+                    <div class="box">
+                      <div class="container-1">
+                          <span class="icon"><i class="fa fa-search"></i></span>
+                          <input type="search" id="search" placeholder="Id rol" />
+                      </div>
                     </div>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-user" id="name" placeholder="Nombre completo">
