--- a/Front-end/app/views/user/updateimage.html
+++ b/Front-end/app/views/user/updateimage.html
@@ -11,11 +11,15 @@
 
   <title>Actualizar Datos Usuario</title>
 
+  <style>
+    body{
+      background-color: #105DEC;
+    }
+  </style>
+
 </head>
 
 <body class="bg-gradient-primary">
-
-  <img src="transporte publico.jpg">
 
   <div class="container">
 
@@ -32,7 +36,7 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Actualizar  ontraseña</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Actualizar  imágen o avatar</h1>
                   </div>
                   <form class="user">
                     <div class="form-group">
@@ -41,11 +45,10 @@
                     </div>
                     
                     <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Actaulizar
+                      Actualizar
                     </a>
                     <hr>
                   </form>
-                  <hr>
                 </div>
               </div>
             </div>
