Modulo de rutas finalizado

--- a/trans-public/app/views/templates/slidebar.html
+++ b/trans-public/app/views/templates/slidebar.html
@@ -77,13 +77,13 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="components-tabs.html">
+                            <a href="#/bus/list">
                                 <i class="metismenu-icon">
                                                 </i>Listado
                             </a>
                         </li>
                         <li>
-                            <a href="components-accordions.html">
+                            <a href="#/bus/create">
                                 <i class="metismenu-icon">
                                                 </i>Crear
                             </a>
@@ -98,37 +98,41 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="components-tabs.html">
-                                <i class="metismenu-icon">
-                                                </i>Tabs
+                            <a href="#/route/list">
+                                <i class="metismenu-icon"></i>Listado
                             </a>
                         </li>
                         <li>
-                            <a href="components-accordions.html">
-                                <i class="metismenu-icon">
-                                                </i>Accordions
+                            <a href="#/route/create">
+                                <i class="metismenu-icon"></i>Crear
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#/route/asign">
+                                <i class="metismenu-icon"></i>Asignar rutas
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#/route/asign/list">
+                                <i class="metismenu-icon"></i>Rutas asignadas
                             </a>
                         </li>
                     </ul>
                 </li>
-
-
-                <li style="visibility:hidden" class="admin item">
-                    <a style="display:none" href="#">
-                        <i class="metismenu-icon pe-7s-display2"></i> Cotratos
+                <li style="visibility:hidden" class="admin  item">
+                    <a href="#">
+                        <i class="metismenu-icon pe-7s-display2"></i> Contratos
                         <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul>
                         <li>
-                            <a href="components-tabs.html">
-                                <i class="metismenu-icon">
-                                                </i>Tabs
+                            <a href="#/contract/list">
+                                <i class="metismenu-icon"></i>Listado
                             </a>
                         </li>
                         <li>
-                            <a href="components-accordions.html">
-                                <i class="metismenu-icon">
-                                                </i>Accordions
+                            <a href="#/contract/create">
+                                <i class="metismenu-icon"></i>Crear
                             </a>
                         </li>
                     </ul>
