--- a/trans-public/app/views/user/list.html
+++ b/trans-public/app/views/user/list.html
@@ -21,9 +21,11 @@
                             </tr>
                         </thead>
                         <tbody id="table-users">
-                           <tr>
-                                <td colspan="4"><h5 class="text-center">No existen datos almacenados</h5></td>
-                           </tr>
+                            <tr>
+                                <td colspan="4">
+                                    <h5 class="text-center">No existen datos almacenados</h5>
+                                </td>
+                            </tr>
 
                             <template id="template">
                                 <tr class="tr-clone">
@@ -32,7 +34,7 @@
                                         <div class="widget-content-wrapper">
                                             <div class="widget-content-left mr-3">
                                                 <div class="widget-content-left">
-                                                    <img width="40" class="rounded-circle image" src="" alt="">
+                                                    <img width="40" class=" image img-driver" src="" alt="">
                                                 </div>
                                             </div>
                                             <div class="widget-content-left flex2">
