--- a/trans-public/app/views/bus/create.html
+++ b/trans-public/app/views/bus/create.html
@@ -14,24 +14,25 @@
                                     <input type="text " name="placa" class="form-control " id=" " placeholder="Placa del bus" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Conductor (buscar por nombre o correo):<span class="required"></span> </label><br>
+                                    <label for="name">Conductor (buscar por nombre o correo):<span
+                                            class="required"></span> </label><br>
                                     <small>Doble click sobre el formulario para habilitarlo, si ya se ha añadido</small>
                                     <input type="text" id="input-driver" class="form-control" placeholder="Nombre completo" required>
                                     <div id="list-drivers"></div>
                                     <template id="show-driver" style="display: none;">
-                                          <div class="driver">
+                                        <div class="driver">
                                             <img class="img-driver" src="" alt=" ">
                                             <div class="data ">
-                                              <div class="name "></div>
-                                              <div class="email "></div>
+                                                <div class="name "></div>
+                                                <div class="email "></div>
                                             </div>
-                                          </div>
-                                       </template>
+                                        </div>
+                                    </template>
                                 </div>
                                 <div class="form-row ">
                                     <div class="form-group col-md-6 ">
                                         <label for="telefono ">Color: <span class="required "></span></label>
-                                        <input type="date" name="color" class="form-control " id="" placeholder="Color " required>
+                                        <input type="text" name="color" class="form-control " id="" placeholder="Color " required>
                                     </div>
                                     <div class="form-group col-md-6 ">
                                         <label for="telefono">Modelo: <span class="required "></span> </label>
