--- a/trans-public/app/views/contract/contracts.html
+++ b/trans-public/app/views/contract/contracts.html
@@ -2,7 +2,7 @@
     <div class="tab-content">
         <div class="tab-pane tabs-animation fade active show" id="tab-content-0" role="tabpanel">
             <div class="main-card mb-3 card">
-                <div class="card-header">Listado de mis rutas
+                <div class="card-header">Listado de rutas Asignadas
                     <div class="btn-actions-pane-right">
 
                     </div>
@@ -11,45 +11,45 @@
                     <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>Nombre</th>
-                                <th class="">Lugar y fecha salida</th>
-                                <th class="">Lugar y fecha llegada</th>
-                                <th>Accion</th>
+                                <th>#</th>
+                                <th>Empresa</th>
+                                <th>Sueldo</th>
+                                <th>Fecha comienzo</th>
+                                <th>Fecha Fin</th>
+                                <th>Estado</th>
                             </tr>
                         </thead>
-                        <tbody id="table-routes">
+                        <tbody id="table-contracts">
                             <tr>
-                                <td colspan="5">
-                                    <h5 class="text-center">No se registran rutas.</h5>
+                                <td colspan="6">
+                                    <h5 class="text-center">No se registran contratos.</h5>
                                 </td>
                             </tr>
-
                             <template id="template">
                                 <tr class="tr-clone">
-                                    <td><i class="name"></i></td>
-                                    <td class="">
+                                    <td><span class="id font-weight-bold"></span></td>
+                                    <td><span class="empresa font-weight-bold"></span></td>
+                                    <td>$<span class="sueldo"></span></td>
+                                    <td>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left flex2">
-                                                    <div class="widget-heading lugarsalida"></div>
-                                                    <div class="widget-subheading opacity-7 fechasalida"></div>
+                                                    <div class=" fechainicio"></div>
                                                 </div>
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="">
+                                    <td>
                                         <div class="widget-content p-0">
                                             <div class="widget-content-wrapper">
                                                 <div class="widget-content-left flex2">
-                                                    <div class="widget-heading lugarllegada"></div>
-                                                    <div class="widget-subheading opacity-7 fechallegada"></div>
+                                                    <div class="fechatermino"></div>
                                                 </div>
                                             </div>
                                         </div>
                                     </td>
-                                    <td class="">
-                                        <button type="button" id=""
-                                            class="btn btn-outline-success route-complete">Completada!</button>
+                                    <td>
+                                        <div class="badge estado">Activo</div>
                                     </td>
                                 </tr>
                             </template>
