--- a/trans-public/app/views/routebus/list.html
+++ b/trans-public/app/views/routebus/list.html
@@ -1,1 +1,82 @@
-<h2>Listado....</h2>
+<div class="app-main__inner animated fadeIn">
+    <div class="tab-content">
+        <div class="tab-pane tabs-animation fade active show" id="tab-content-0" role="tabpanel">
+            <div class="main-card mb-3 card">
+                <div class="card-header">Listado de rutas Asignadas
+                    <div class="btn-actions-pane-right">
+                        <!-- <div role="group" class="btn-group-sm btn-group">
+                            <button class="active btn btn-focus">Last Week</button>
+                            <button class="btn btn-focus">All Month</button>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>Usuario</th>
+                                <th>Bus</th>
+                                <th class="">Lugar y fecha salida</th>
+                                <th class="">Lugar y fecha llegada</th>
+                                <th>Accion</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-routes">
+                            <tr>
+                                <td colspan="4">
+                                    <h5 class="text-center">No se registran rutas a tu cargo.</h5>
+                                </td>
+                            </tr>
+
+                            <template id="template">
+                                <tr class="tr-clone">
+                                    <td class="m-md-2">
+                                        <div class="widget-content p-0">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left mr-3">
+                                                    <div class="widget-content-left">
+                                                        <img width="40" class=" image img-driver" src="" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="widget-content-left flex2">
+                                                    <div class="widget-heading name"></div>
+                                                    <div class="widget-subheading opacity-7 email"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td><span class="bus font-weight-bold"></span></td>
+                                    <td class="">
+                                        <div class="widget-content p-0">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left flex2">
+                                                    <div class="widget-heading lugarsalida"></div>
+                                                    <div class="widget-subheading opacity-7 fechasalida"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="">
+                                        <div class="widget-content p-0">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left flex2">
+                                                    <div class="widget-heading lugarllegada"></div>
+                                                    <div class="widget-subheading opacity-7 fechallegada"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="">
+                                        <button type="button" id="" class="btn btn-outline-success route-complete"><i
+                                                class="pe-7s-check"></i></button>
+                                    </td>
+                                </tr>
+                            </template>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
