--- a/trans-public/app/views/templates/navbar.html
+++ b/trans-public/app/views/templates/navbar.html
@@ -4,28 +4,28 @@
         <div class="header__pane ml-auto">
             <div>
                 <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                        </button>
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
             </div>
         </div>
     </div>
     <div class="app-header__mobile-menu">
         <div>
             <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                    </button>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
         </div>
     </div>
     <div class="app-header__menu">
         <span>
-                    <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
+            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                <span class="btn-icon-wrapper">
+                    <i class="fa fa-ellipsis-v fa-w-6"></i>
+                </span>
         </button>
         </span>
     </div>
@@ -47,16 +47,18 @@
                         <div class="widget-content-left">
                             <div class="btn-group">
                                 <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                                    <img width="42" id="image-profile" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">
+                                    <img width="42" id="image-profile" class="rounded-circle" alt="">
                                     <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                     <h6 tabindex="-1" class="dropdown-header text-secondary">Mi cuenta</h6>
-                                    <a href="#/user/logout" tabindex="0" class="dropdown-item"><b class="text-primary text-big" id="rol-profile">User</b></a>
+                                    <a href="#/user/logout" tabindex="0" class="dropdown-item"><b
+                                            class="text-primary text-big" id="rol-profile">User</b></a>
                                     <button type="button" tabindex="0" class="dropdown-item">Mi Perfil</button>
                                     <button type="button" tabindex="0" class="dropdown-item">Ajustes</button>
                                     <div tabindex="-1" class="dropdown-divider"></div>
-                                    <a href="#/auth/logout" tabindex="0" class="dropdown-item"><b class="text-danger">Cerrar sesion</b></a>
+                                    <a href="#/auth/logout" tabindex="0" class="dropdown-item"><b
+                                            class="text-danger">Cerrar sesion</b></a>
                                 </div>
                             </div>
                         </div>
