--- a/trans-public/app/views/templates/slidebar.html
+++ b/trans-public/app/views/templates/slidebar.html
@@ -4,28 +4,28 @@
         <div class="header__pane ml-auto">
             <div>
                 <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                                    <span class="hamburger-box">
-                                        <span class="hamburger-inner"></span>
-                                    </span>
-                                </button>
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
             </div>
         </div>
     </div>
     <div class="app-header__mobile-menu">
         <div>
             <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                                <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
-                                </span>
-                            </button>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
         </div>
     </div>
     <div class="app-header__menu">
         <span>
-                            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                                <span class="btn-icon-wrapper">
-                                    <i class="fa fa-ellipsis-v fa-w-6"></i>
-                                </span>
+            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                <span class="btn-icon-wrapper">
+                    <i class="fa fa-ellipsis-v fa-w-6"></i>
+                </span>
         </button>
         </span>
     </div>
@@ -51,6 +51,11 @@
                             </a>
                         </li>
                     </ul>
+                </li>
+                <li style="visibility:hidden" class="conductor coo item">
+                    <a href="#/employed/contract/see">
+                        <i class="metismenu-icon pe-7s-display2"></i>Mis contratos
+                    </a>
                 </li>
                 <li style="visibility:hidden" class="admin item">
                     <a href="#">
@@ -79,13 +84,13 @@
                         <li>
                             <a href="#/bus/list">
                                 <i class="metismenu-icon">
-                                                </i>Listado
+                                </i>Listado
                             </a>
                         </li>
                         <li>
                             <a href="#/bus/create">
                                 <i class="metismenu-icon">
-                                                </i>Crear
+                                </i>Crear
                             </a>
                         </li>
                     </ul>
@@ -140,7 +145,7 @@
 
                 <li style="display:none" class="app-sidebar__heading admin">Ajustes</li>
                 <li style="display:none " class="admin">
-                    <a href="dashboard-boxes.html">
+                    <a href="">
                         <i class="metismenu-icon pe-7s-display2"></i>Configuracion
                     </a>
                 </li>
