--- a/trans-public/app/views/user/list.html
+++ b/trans-public/app/views/user/list.html
@@ -4,10 +4,6 @@
             <div class="main-card mb-3 card">
                 <div class="card-header">Listado de empleados
                     <div class="btn-actions-pane-right">
-                        <!-- <div role="group" class="btn-group-sm btn-group">
-                            <button class="active btn btn-focus">Last Week</button>
-                            <button class="btn btn-focus">All Month</button>
-                        </div> -->
                     </div>
                 </div>
                 <div class="table-responsive">
@@ -29,29 +25,30 @@
 
                             <template id="template">
                                 <tr class="tr-clone">
-                                <td class="m-md-2">
-                                    <div class="widget-content p-0">
-                                        <div class="widget-content-wrapper">
-                                            <div class="widget-content-left mr-3">
-                                                <div class="widget-content-left">
-                                                    <img width="40" class=" image img-driver" src="" alt="">
+                                    <td class="m-md-2">
+                                        <div class="widget-content p-0">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left mr-3">
+                                                    <div class="widget-content-left">
+                                                        <img width="40" class=" image img-driver" src="" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="widget-content-left flex2">
+                                                    <div class="widget-heading name"></div>
+                                                    <div class="widget-subheading opacity-7 email"></div>
                                                 </div>
                                             </div>
-                                            <div class="widget-content-left flex2">
-                                                <div class="widget-heading name" ></div>
-                                                <div class="widget-subheading opacity-7 email"></div>
-                                            </div>
                                         </div>
-                                    </div>
-                                </td>
-                                <td class="text-center contact"></td>
-                                <td class="text-center rol">
-                                    <div class="badge"></div>
-                                </td>
-                                <td class="text-center">
-                                    <button type="button" id="" class="btn btn-primary btn-sm user-detalle"><i class="pe-7s-eyedropper"> </i></button>
-                                </td>
-                            </tr>
+                                    </td>
+                                    <td class="text-center contact"></td>
+                                    <td class="text-center rol">
+                                        <div class="badge"></div>
+                                    </td>
+                                    <td class="text-center">
+                                        <button type="button" id="" class="btn btn-primary btn-sm user-detalle"><i
+                                                class="pe-7s-eyedropper"> </i></button>
+                                    </td>
+                                </tr>
                             </template>
 
                         </tbody>
